fix: Better spacing

--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ main {
 }
 
 header {
-	margin-bottom: 6rem;
+	margin-bottom: 4rem;
 	margin-top: 2rem;
 }
 
@@ -45,6 +45,10 @@ header {
 	width: 60%;
 	max-width: 1100px;
 	margin: 0 auto;
+}
+
+.subhead {
+	margin-block: 1rem;
 }
 
 /* Flex Outer (form) */
@@ -114,7 +118,6 @@ header {
 	text-align: center;
 	margin: 2rem 1rem;
 	font-size: 1rem;
-	/* min-height: 2rem; */
 }
 
 form {
@@ -127,9 +130,9 @@ form {
 code {
 	display: inline-block;
 	margin: 1rem 0;
-	padding: 0.125rem;
+	padding: 0.125rem 0.25rem;
 	font-size: 1rem;
-	font-family: "Courier New", Courier, monospace;
+	font-family: monospace;
 	background: #f2f2f2;
 	color: #333;
 	font-weight: 600;
